--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
   },
   "dependencies": {
     "@nuxt/eslint": "1.3.0",
+    "@nuxt/fonts": "0.11.1",
+    "@nuxt/ui": "3.0.2",
+    "@pinia/nuxt": "0.10.1",
+    "@tailwindcss/vite": "^4.1.3",
     "@tresjs/nuxt": "^3.0.8",
-    "eslint": "^9.0.0",
+    "@vueuse/nuxt": "13.0.0",
+    "eslint": "^9.24.0",
     "nuxt": "^3.16.2",
+    "pinia": "^3.0.1",
+    "tailwindcss": "^4.1.3",
+    "typescript": "^5.8.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   }
