--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint . --fix && bun run scripts/typecheck.ts"
   },
   "dependencies": {
-    "@nuxt/eslint": "1.3.0",
+    "@nuxt/eslint": "^1.3.0",
     "@nuxt/fonts": "0.11.1",
     "@nuxt/ui": "3.0.2",
     "@pinia/nuxt": "0.10.1",
@@ -24,5 +23,9 @@
     "typescript": "^5.8.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.2.8",
+    "vue-tsc": "^2.2.8"
   }
 }
