--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: bun install
       - name: Static HTML export with Nuxt
-        run: bun run generate
+        run: NUXT_APP_BASE_URL="/LD57" bun run generate
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
