--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint . --fix && bun run scripts/typecheck.ts"
   },
   "dependencies": {
+    "@nuxt/content": "3.4.0",
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/fonts": "0.11.1",
+    "@nuxt/icon": "1.11.0",
     "@nuxt/ui": "3.0.2",
     "@pinia/nuxt": "0.10.1",
     "@tailwindcss/vite": "^4.1.3",
+    "@tresjs/cientos": "^4.3.0",
     "@tresjs/nuxt": "^3.0.8",
     "@vueuse/nuxt": "13.0.0",
     "eslint": "^9.24.0",
