--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/ui": "3.0.2",
     "@pinia/nuxt": "0.10.1",
     "@tailwindcss/vite": "^4.1.3",
+    "@therealironduck/ducktory": "^0.1.2",
     "@vueuse/nuxt": "13.0.0",
     "eslint": "^9.24.0",
     "nuxt": "^3.16.2",
