--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -39,11 +39,11 @@ jobs:
       - name: Install dependencies
         run: bun install
       - name: Static HTML export with Nuxt
-        run: NUXT_APP_BASE_URL="/LD57" bun run generate
+        run: NUXT_APP_BASE_URL="/LD57" bunx nuxi build --prerender
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: ./output/public
 
   deploy:
     environment:
