--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -38,6 +38,8 @@ jobs:
             ${{ runner.os }}-nuxt-build-
       - name: Install dependencies
         run: bun install
+      - name: Prepare for build
+        run: bunx nuxi prepare
       - name: Static HTML export with Nuxt
         run: NUXT_APP_BASE_URL="/LD57" bunx nuxi build --prerender
       - name: Upload artifact
